# IjazCo

./: .gitignore  erp.db  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  FUNCTIONS.md  README.md  erp.db  fix_enum.rs  tauri.conf.json
src-tauri/migrations/postgres/: 20240101_initial_schema.sql  20250101_fix_user_role_enum.sql  20260101_fix_tags_column.sql  20260201_create_leads.sql
src-tauri/migrations/sqlite/: 20240101_initial_schema.sql  20240102000000_seed_data.sql  20260201_create_leads.sql
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/handlers/: auth.rs  categories.rs  companies.rs  customers.rs  dashboard.rs  health.rs  imports.rs  inventory.rs  leads.rs  mod.rs  purchases.rs  reports.rs  roles.rs  sales.rs  stock.rs  suppliers.rs  users.rs
src-tauri/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs  rbac.rs
src-tauri/src/models/: audit.rs  branch.rs  category.rs  company.rs  customer.rs  import.rs  inventory.rs  inventory.rs.backup  inventory.rs.bak  lead.rs  mod.rs  purchase.rs  sales.rs  stock.rs  supplier.rs  user.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/tests/common/: mod.rs
src-tauri/src/tests/integration/: auth_api_test.rs  inventory_api_test.rs  mod.rs  sales_api_test.rs
src-tauri/src/tests/unit/: user_model_test.rs
src-tauri/src/utils/: error.rs  jwt.rs  mod.rs  password.rs  response.rs
src/api/: auth.ts  categories.ts  client.ts  companies.ts  customers.ts  dashboard.ts  inventory.ts  leads.ts  purchases.ts  reports.ts  roles.ts  sales.ts  stock.ts  suppliers.ts  users.ts
src/components/: Layout.css  Layout.tsx  Toast.css  ToastContainer.tsx
src/components/charts/: InventoryChart.tsx  SalesChart.tsx  StockMovementChart.tsx
src/components/common/: ConfirmModal.tsx  DataTable.tsx  EmptyState.tsx  ErrorBoundary.tsx  LoadingOverlay.tsx  PageHeader.tsx  PaginationControl.tsx  SearchInput.tsx  StatCard.tsx  StatusBadge.tsx
src/components/forms/: CategoryForm.tsx  CompanyForm.tsx  CustomerForm.tsx  ImportOrderForm.tsx  InventoryItemForm.tsx  LeadForm.tsx  PurchaseOrderForm.tsx  RoleForm.tsx  SalesInvoiceForm.tsx  StockAdjustForm.tsx  StockTransferForm.tsx  SupplierForm.tsx  UserForm.tsx
src/components/layout/: AppShell.tsx  Header.tsx  NavItem.tsx  Sidebar.tsx  UserMenu.tsx
src/contexts/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx
src/design-system/: components.tsx  theme.ts  tokens.ts
src/hooks/: useAuth.ts  useConfirm.tsx  usePagination.ts  usePermissions.ts
src/pages/: CategoriesPage.css  CategoriesPage.tsx  CustomersPage.css  CustomersPage.tsx  DashboardPage.css  DashboardPage.tsx  EditCustomerPage.tsx  EditInventoryPage.tsx  EditSupplierPage.tsx  EditUserPage.tsx  FormPage.css  ImportsPage.css  ImportsPage.tsx  InventoryPage.css  InventoryPage.tsx  LoginPage.css  LoginPage.tsx  NewCustomerPage.tsx  NewImportPage.tsx  NewItemPage.tsx  NewPurchasePage.tsx  NewSalePage.tsx  NewSupplierPage.tsx  NewUserPage.tsx  OtpPage.tsx  PurchasesPage.css  PurchasesPage.tsx  ReportsPage.css  ReportsPage.tsx  SalesPage.css  SalesPage.tsx  SuppliersPage.css  SuppliersPage.tsx  UsersPage.css  UsersPage.tsx
src/pages/auth/: ForgotPasswordPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx
src/pages/categories/: CategoriesPage.tsx
src/pages/companies/: CompaniesPage.tsx  CompanyDetailPage.tsx
src/pages/customers/: CustomerDetailPage.tsx  CustomersPage.tsx
src/pages/dashboard/: DashboardPage.tsx
src/pages/inventory/: CreateInventoryPage.tsx  EditInventoryPage.tsx  InventoryDetailPage.tsx  InventoryPage.tsx  LowStockPage.tsx
src/pages/leads/: LeadDetailPage.tsx  LeadsPage.tsx
src/pages/purchases/: PurchasesPage.tsx
src/pages/reports/: ReportsPage.tsx
src/pages/roles/: RoleDetailPage.tsx  RolesPage.tsx
src/pages/sales/: CreateInvoicePage.tsx  InvoiceDetailPage.tsx  SalesPage.tsx
src/pages/settings/: SettingsPage.tsx
src/pages/stock/: PhysicalCountPage.tsx  StockMovementsPage.tsx  StockPage.tsx
src/pages/suppliers/: SupplierDetailPage.tsx  SuppliersPage.tsx
src/pages/users/: CreateUserPage.tsx  UserDetailPage.tsx  UsersPage.tsx
src/router/: index.tsx
src/services/: api.ts  auth.ts  categories.ts  companies.ts  customers.ts  dashboard.ts  health.ts  imports.ts  inventory.ts  purchases.ts  reports.ts  roles.ts  sales.ts  stock.ts  suppliers.ts  users.ts
src/store/: authStore.ts  index.ts  notificationStore.ts  uiStore.ts
src/types/: auth.d.ts  category.d.ts  company.d.ts  customer.d.ts  dashboard.d.ts  import.d.ts  index.d.ts  inventory.d.ts  purchase.d.ts  role.d.ts  role.ts  sales.d.ts  stocl.d.ts  supplier.d.ts  user.d.ts
src/utils/: constants.ts  formatters.ts
